--- a/humanoid-robotics-book/vercel.json
+++ b/humanoid-robotics-book/vercel.json
@@ -1,9 +1,11 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/docusaurus"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ]
 }
